--- a/pipe/src/github.com/johnstarich/go/pipe/pipe.go.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/pipe.go.html
@@ -139,89 +139,93 @@
 <span id="L83" class="ln">    83  </span>	for i := range out {
 <span id="L84" class="ln">    84  </span>		out[i] = lastOp.Out(i)
 <span id="L85" class="ln">    85  </span>	}
-<span id="L86" class="ln">    86  </span>	bridgeType := reflect.FuncOf(out, []reflect.Type{interfaceSliceType}, false)
-<span id="L87" class="ln">    87  </span>	bridgeFn := func(argVals []reflect.Value) (results []reflect.Value) {
-<span id="L88" class="ln">    88  </span>		args := make([]interface{}, len(argVals))
-<span id="L89" class="ln">    89  </span>		for i := range args {
-<span id="L90" class="ln">    90  </span>			args[i] = argVals[i].Interface()
-<span id="L91" class="ln">    91  </span>		}
-<span id="L92" class="ln">    92  </span>		return []reflect.Value{reflect.ValueOf(args)}
-<span id="L93" class="ln">    93  </span>	}
-<span id="L94" class="ln">    94  </span>
-<span id="L95" class="ln">    95  </span>	p = p.Append(reflect.MakeFunc(bridgeType, bridgeFn).Interface())
-<span id="L96" class="ln">    96  </span>	p.ops = append(p.ops, other.ops...)
-<span id="L97" class="ln">    97  </span>	return p
-<span id="L98" class="ln">    98  </span>}
-<span id="L99" class="ln">    99  </span>
-<span id="L100" class="ln">   100  </span>func (p Pipe) appendFunc(fn interface{}) (Pipe, error) {
-<span id="L101" class="ln">   101  </span>	op := reflect.ValueOf(fn)
-<span id="L102" class="ln">   102  </span>	if op.Kind() != reflect.Func {
-<span id="L103" class="ln">   103  </span>		return p, fmt.Errorf(&#34;pipe value must a function, got: %T&#34;, fn)
-<span id="L104" class="ln">   104  </span>	}
-<span id="L105" class="ln">   105  </span>	if len(p.ops) == 0 {
-<span id="L106" class="ln">   106  </span>		opType := op.Type()
-<span id="L107" class="ln">   107  </span>		if opType.NumIn() != 1 || opType.In(0) != interfaceSliceType {
-<span id="L108" class="ln">   108  </span>			return p, fmt.Errorf(&#34;first pipe must accept 1 parameter of type []interface{}&#34;)
-<span id="L109" class="ln">   109  </span>		}
-<span id="L110" class="ln">   110  </span>	} else {
-<span id="L111" class="ln">   111  </span>		lastOp := p.ops[len(p.ops)-1]
-<span id="L112" class="ln">   112  </span>		if err := outMatchesIn(lastOp.Type(), op.Type()); err != nil {
-<span id="L113" class="ln">   113  </span>			return p, err
-<span id="L114" class="ln">   114  </span>		}
-<span id="L115" class="ln">   115  </span>	}
-<span id="L116" class="ln">   116  </span>	p.ops = append(p.ops, op)
-<span id="L117" class="ln">   117  </span>	return p, nil
-<span id="L118" class="ln">   118  </span>}
-<span id="L119" class="ln">   119  </span>
-<span id="L120" class="ln">   120  </span>func splitErrValue(args []reflect.Value) ([]reflect.Value, error) {
-<span id="L121" class="ln">   121  </span>	if len(args) == 0 {
-<span id="L122" class="ln">   122  </span>		return args, nil
-<span id="L123" class="ln">   123  </span>	}
-<span id="L124" class="ln">   124  </span>	lastVal := args[len(args)-1]
-<span id="L125" class="ln">   125  </span>	if !isErr(lastVal.Type()) {
+<span id="L86" class="ln">    86  </span>	if len(out) &gt; 0 &amp;&amp; isErr(out[len(out)-1]) {
+<span id="L87" class="ln">    87  </span>		<span class="comment">// trim off last error return type, if present</span>
+<span id="L88" class="ln">    88  </span>		out = out[:len(out)-1]
+<span id="L89" class="ln">    89  </span>	}
+<span id="L90" class="ln">    90  </span>	bridgeType := reflect.FuncOf(out, []reflect.Type{interfaceSliceType}, false)
+<span id="L91" class="ln">    91  </span>	bridgeFn := func(argVals []reflect.Value) (results []reflect.Value) {
+<span id="L92" class="ln">    92  </span>		args := make([]interface{}, len(argVals))
+<span id="L93" class="ln">    93  </span>		for i := range args {
+<span id="L94" class="ln">    94  </span>			args[i] = argVals[i].Interface()
+<span id="L95" class="ln">    95  </span>		}
+<span id="L96" class="ln">    96  </span>		return []reflect.Value{reflect.ValueOf(args)}
+<span id="L97" class="ln">    97  </span>	}
+<span id="L98" class="ln">    98  </span>
+<span id="L99" class="ln">    99  </span>	p = p.Append(reflect.MakeFunc(bridgeType, bridgeFn).Interface())
+<span id="L100" class="ln">   100  </span>	p.ops = append(p.ops, other.ops...)
+<span id="L101" class="ln">   101  </span>	return p
+<span id="L102" class="ln">   102  </span>}
+<span id="L103" class="ln">   103  </span>
+<span id="L104" class="ln">   104  </span>func (p Pipe) appendFunc(fn interface{}) (Pipe, error) {
+<span id="L105" class="ln">   105  </span>	op := reflect.ValueOf(fn)
+<span id="L106" class="ln">   106  </span>	if op.Kind() != reflect.Func {
+<span id="L107" class="ln">   107  </span>		return p, fmt.Errorf(&#34;pipe value must a function, got: %T&#34;, fn)
+<span id="L108" class="ln">   108  </span>	}
+<span id="L109" class="ln">   109  </span>	if len(p.ops) == 0 {
+<span id="L110" class="ln">   110  </span>		opType := op.Type()
+<span id="L111" class="ln">   111  </span>		if opType.NumIn() != 1 || opType.In(0) != interfaceSliceType {
+<span id="L112" class="ln">   112  </span>			return p, fmt.Errorf(&#34;first pipe must accept 1 parameter of type []interface{}&#34;)
+<span id="L113" class="ln">   113  </span>		}
+<span id="L114" class="ln">   114  </span>	} else {
+<span id="L115" class="ln">   115  </span>		lastOp := p.ops[len(p.ops)-1]
+<span id="L116" class="ln">   116  </span>		if err := outMatchesIn(lastOp.Type(), op.Type()); err != nil {
+<span id="L117" class="ln">   117  </span>			return p, err
+<span id="L118" class="ln">   118  </span>		}
+<span id="L119" class="ln">   119  </span>	}
+<span id="L120" class="ln">   120  </span>	p.ops = append(p.ops, op)
+<span id="L121" class="ln">   121  </span>	return p, nil
+<span id="L122" class="ln">   122  </span>}
+<span id="L123" class="ln">   123  </span>
+<span id="L124" class="ln">   124  </span>func splitErrValue(args []reflect.Value) ([]reflect.Value, error) {
+<span id="L125" class="ln">   125  </span>	if len(args) == 0 {
 <span id="L126" class="ln">   126  </span>		return args, nil
 <span id="L127" class="ln">   127  </span>	}
-<span id="L128" class="ln">   128  </span>
-<span id="L129" class="ln">   129  </span>	errInt := lastVal.Interface()
-<span id="L130" class="ln">   130  </span>	var err error
-<span id="L131" class="ln">   131  </span>	if errInt != nil {
-<span id="L132" class="ln">   132  </span>		err = errInt.(error)
-<span id="L133" class="ln">   133  </span>	}
-<span id="L134" class="ln">   134  </span>	return args[:len(args)-1], err
-<span id="L135" class="ln">   135  </span>}
-<span id="L136" class="ln">   136  </span>
-<span id="L137" class="ln">   137  </span>func isErr(v reflect.Type) bool {
-<span id="L138" class="ln">   138  </span>	return v.Implements(errType)
+<span id="L128" class="ln">   128  </span>	lastVal := args[len(args)-1]
+<span id="L129" class="ln">   129  </span>	if !isErr(lastVal.Type()) {
+<span id="L130" class="ln">   130  </span>		return args, nil
+<span id="L131" class="ln">   131  </span>	}
+<span id="L132" class="ln">   132  </span>
+<span id="L133" class="ln">   133  </span>	errInt := lastVal.Interface()
+<span id="L134" class="ln">   134  </span>	var err error
+<span id="L135" class="ln">   135  </span>	if errInt != nil {
+<span id="L136" class="ln">   136  </span>		err = errInt.(error)
+<span id="L137" class="ln">   137  </span>	}
+<span id="L138" class="ln">   138  </span>	return args[:len(args)-1], err
 <span id="L139" class="ln">   139  </span>}
 <span id="L140" class="ln">   140  </span>
-<span id="L141" class="ln">   141  </span>func outMatchesIn(outFn, inFn reflect.Type) error {
-<span id="L142" class="ln">   142  </span>	var outTypes []reflect.Type
-<span id="L143" class="ln">   143  </span>	for i := 0; i &lt; outFn.NumOut(); i++ {
-<span id="L144" class="ln">   144  </span>		outTypes = append(outTypes, outFn.Out(i))
-<span id="L145" class="ln">   145  </span>	}
-<span id="L146" class="ln">   146  </span>	var inTypes []reflect.Type
-<span id="L147" class="ln">   147  </span>	for i := 0; i &lt; inFn.NumIn(); i++ {
-<span id="L148" class="ln">   148  </span>		inTypes = append(inTypes, inFn.In(i))
+<span id="L141" class="ln">   141  </span>func isErr(v reflect.Type) bool {
+<span id="L142" class="ln">   142  </span>	return v.Implements(errType)
+<span id="L143" class="ln">   143  </span>}
+<span id="L144" class="ln">   144  </span>
+<span id="L145" class="ln">   145  </span>func outMatchesIn(outFn, inFn reflect.Type) error {
+<span id="L146" class="ln">   146  </span>	var outTypes []reflect.Type
+<span id="L147" class="ln">   147  </span>	for i := 0; i &lt; outFn.NumOut(); i++ {
+<span id="L148" class="ln">   148  </span>		outTypes = append(outTypes, outFn.Out(i))
 <span id="L149" class="ln">   149  </span>	}
-<span id="L150" class="ln">   150  </span>
-<span id="L151" class="ln">   151  </span>	if len(outTypes) == len(inTypes)+1 &amp;&amp; isErr(outTypes[len(outTypes)-1]) {
-<span id="L152" class="ln">   152  </span>		outTypes = outTypes[:len(outTypes)-1]
+<span id="L150" class="ln">   150  </span>	var inTypes []reflect.Type
+<span id="L151" class="ln">   151  </span>	for i := 0; i &lt; inFn.NumIn(); i++ {
+<span id="L152" class="ln">   152  </span>		inTypes = append(inTypes, inFn.In(i))
 <span id="L153" class="ln">   153  </span>	}
 <span id="L154" class="ln">   154  </span>
-<span id="L155" class="ln">   155  </span>	if len(outTypes) != len(inTypes) {
-<span id="L156" class="ln">   156  </span>		return fmt.Errorf(&#34;new function&#39;s parameter types do not match output function&#39;s return types: %v != %v&#34;, outTypes, inTypes)
+<span id="L155" class="ln">   155  </span>	if len(outTypes) == len(inTypes)+1 &amp;&amp; isErr(outTypes[len(outTypes)-1]) {
+<span id="L156" class="ln">   156  </span>		outTypes = outTypes[:len(outTypes)-1]
 <span id="L157" class="ln">   157  </span>	}
 <span id="L158" class="ln">   158  </span>
-<span id="L159" class="ln">   159  </span>	for i := range outTypes {
-<span id="L160" class="ln">   160  </span>		out := outTypes[i]
-<span id="L161" class="ln">   161  </span>		in := inTypes[i]
-<span id="L162" class="ln">   162  </span>		if out != in {
-<span id="L163" class="ln">   163  </span>			return fmt.Errorf(&#34;new function&#39;s parameter type %v does not match the expected return type %v&#34;, in, out)
-<span id="L164" class="ln">   164  </span>		}
-<span id="L165" class="ln">   165  </span>	}
-<span id="L166" class="ln">   166  </span>	return nil
-<span id="L167" class="ln">   167  </span>}
-<span id="L168" class="ln">   168  </span>
+<span id="L159" class="ln">   159  </span>	if len(outTypes) != len(inTypes) {
+<span id="L160" class="ln">   160  </span>		return fmt.Errorf(&#34;new function&#39;s parameter types do not match output function&#39;s return types: %v != %v&#34;, outTypes, inTypes)
+<span id="L161" class="ln">   161  </span>	}
+<span id="L162" class="ln">   162  </span>
+<span id="L163" class="ln">   163  </span>	for i := range outTypes {
+<span id="L164" class="ln">   164  </span>		out := outTypes[i]
+<span id="L165" class="ln">   165  </span>		in := inTypes[i]
+<span id="L166" class="ln">   166  </span>		if out != in {
+<span id="L167" class="ln">   167  </span>			return fmt.Errorf(&#34;new function&#39;s parameter type %v does not match the expected return type %v&#34;, in, out)
+<span id="L168" class="ln">   168  </span>		}
+<span id="L169" class="ln">   169  </span>	}
+<span id="L170" class="ln">   170  </span>	return nil
+<span id="L171" class="ln">   171  </span>}
+<span id="L172" class="ln">   172  </span>
 </pre><p></p>
 
 <div id="footer">
