--- a/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
@@ -106,49 +106,69 @@
 <span id="L50" class="ln">    50  </span>
 <span id="L51" class="ln">    51  </span>func TestError(t *testing.T) {
 <span id="L52" class="ln">    52  </span>	e := Error{errs: []error{
-<span id="L53" class="ln">    53  </span>		os.ErrClosed,
+<span id="L53" class="ln">    53  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
 <span id="L54" class="ln">    54  </span>	}}
 <span id="L55" class="ln">    55  </span>
-<span id="L56" class="ln">    56  </span>	if e.Error() != &#34;pipe: file already closed&#34; {
+<span id="L56" class="ln">    56  </span>	if e.Error() != &#34;pipe: create foo: file already exists&#34; {
 <span id="L57" class="ln">    57  </span>		t.Error(&#34;Unexpected single error message:&#34;, e)
 <span id="L58" class="ln">    58  </span>	}
-<span id="L59" class="ln">    59  </span>}
-<span id="L60" class="ln">    60  </span>
-<span id="L61" class="ln">    61  </span>func TestErrorMulti(t *testing.T) {
-<span id="L62" class="ln">    62  </span>	e := Error{errs: []error{
-<span id="L63" class="ln">    63  </span>		fmt.Errorf(&#34;error 1&#34;),
-<span id="L64" class="ln">    64  </span>		fmt.Errorf(&#34;error 2&#34;),
-<span id="L65" class="ln">    65  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
-<span id="L66" class="ln">    66  </span>	}}
-<span id="L67" class="ln">    67  </span>
-<span id="L68" class="ln">    68  </span>	if expect := &#34;pipe: multiple errors: error 1; error 2; create foo: file already exists&#34;; e.Error() != expect {
-<span id="L69" class="ln">    69  </span>		t.Errorf(&#34;Error() must equal %q, but found: %q&#34;, expect, e.Error())
-<span id="L70" class="ln">    70  </span>	}
-<span id="L71" class="ln">    71  </span>
-<span id="L72" class="ln">    72  </span>	if errors.Unwrap(e) != e.errs[0] {
-<span id="L73" class="ln">    73  </span>		t.Error(&#34;errors.Unwrap() must return the first error&#34;)
+<span id="L59" class="ln">    59  </span>
+<span id="L60" class="ln">    60  </span>	if errors.Unwrap(e) != e.errs[0] {
+<span id="L61" class="ln">    61  </span>		t.Error(&#34;errors.Unwrap() must return the first error&#34;)
+<span id="L62" class="ln">    62  </span>	}
+<span id="L63" class="ln">    63  </span>
+<span id="L64" class="ln">    64  </span>	if !errors.Is(e, os.ErrExist) {
+<span id="L65" class="ln">    65  </span>		t.Error(&#34;errors.Is(e, target) must be true when matching child error&#34;)
+<span id="L66" class="ln">    66  </span>	}
+<span id="L67" class="ln">    67  </span>	if errors.Is(e, os.ErrClosed) {
+<span id="L68" class="ln">    68  </span>		t.Error(&#34;errors.Is(e, target) must be false when no matching child error&#34;)
+<span id="L69" class="ln">    69  </span>	}
+<span id="L70" class="ln">    70  </span>
+<span id="L71" class="ln">    71  </span>	var linkErr *os.LinkError
+<span id="L72" class="ln">    72  </span>	if errors.As(e, &amp;linkErr) {
+<span id="L73" class="ln">    73  </span>		t.Error(&#34;errors.As(e, target) must be false when no matching child error&#34;)
 <span id="L74" class="ln">    74  </span>	}
-<span id="L75" class="ln">    75  </span>
-<span id="L76" class="ln">    76  </span>	if !errors.Is(e, os.ErrExist) {
-<span id="L77" class="ln">    77  </span>		t.Error(&#34;errors.Is(e, target) must be true when matching child error&#34;)
+<span id="L75" class="ln">    75  </span>	var pathErr *os.PathError
+<span id="L76" class="ln">    76  </span>	if !errors.As(e, &amp;pathErr) {
+<span id="L77" class="ln">    77  </span>		t.Error(&#34;errors.As(e, target) must be true when matching child error&#34;)
 <span id="L78" class="ln">    78  </span>	}
-<span id="L79" class="ln">    79  </span>	if errors.Is(e, os.ErrClosed) {
-<span id="L80" class="ln">    80  </span>		t.Error(&#34;errors.Is(e, target) must be false when no matching child error&#34;)
+<span id="L79" class="ln">    79  </span>	if !reflect.DeepEqual(pathErr, e.errs[0]) {
+<span id="L80" class="ln">    80  </span>		t.Error(&#34;Path error from errors.As() should be set&#34;)
 <span id="L81" class="ln">    81  </span>	}
-<span id="L82" class="ln">    82  </span>
-<span id="L83" class="ln">    83  </span>	var linkErr *os.LinkError
-<span id="L84" class="ln">    84  </span>	if errors.As(e, &amp;linkErr) {
-<span id="L85" class="ln">    85  </span>		t.Error(&#34;errors.As(e, target) must be false when no matching child error&#34;)
-<span id="L86" class="ln">    86  </span>	}
-<span id="L87" class="ln">    87  </span>	var pathErr *os.PathError
-<span id="L88" class="ln">    88  </span>	if !errors.As(e, &amp;pathErr) {
-<span id="L89" class="ln">    89  </span>		t.Error(&#34;errors.As(e, target) must be true when matching child error&#34;)
-<span id="L90" class="ln">    90  </span>	}
-<span id="L91" class="ln">    91  </span>	if !reflect.DeepEqual(pathErr, e.errs[2]) {
-<span id="L92" class="ln">    92  </span>		t.Error(&#34;Path error from errors.As() should be set&#34;)
+<span id="L82" class="ln">    82  </span>}
+<span id="L83" class="ln">    83  </span>
+<span id="L84" class="ln">    84  </span>func TestErrorMulti(t *testing.T) {
+<span id="L85" class="ln">    85  </span>	e := Error{errs: []error{
+<span id="L86" class="ln">    86  </span>		fmt.Errorf(&#34;error 1&#34;),
+<span id="L87" class="ln">    87  </span>		fmt.Errorf(&#34;error 2&#34;),
+<span id="L88" class="ln">    88  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
+<span id="L89" class="ln">    89  </span>	}}
+<span id="L90" class="ln">    90  </span>
+<span id="L91" class="ln">    91  </span>	if expect := &#34;pipe: multiple errors: error 1; error 2; create foo: file already exists&#34;; e.Error() != expect {
+<span id="L92" class="ln">    92  </span>		t.Errorf(&#34;Error() must equal %q, but found: %q&#34;, expect, e.Error())
 <span id="L93" class="ln">    93  </span>	}
-<span id="L94" class="ln">    94  </span>}
-<span id="L95" class="ln">    95  </span>
+<span id="L94" class="ln">    94  </span>
+<span id="L95" class="ln">    95  </span>	if errors.Unwrap(e) != nil {
+<span id="L96" class="ln">    96  </span>		t.Error(&#34;errors.Unwrap() must return nil for multiple errors&#34;)
+<span id="L97" class="ln">    97  </span>	}
+<span id="L98" class="ln">    98  </span>
+<span id="L99" class="ln">    99  </span>	if errors.Is(e, os.ErrExist) {
+<span id="L100" class="ln">   100  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
+<span id="L101" class="ln">   101  </span>	}
+<span id="L102" class="ln">   102  </span>	if errors.Is(e, os.ErrClosed) {
+<span id="L103" class="ln">   103  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
+<span id="L104" class="ln">   104  </span>	}
+<span id="L105" class="ln">   105  </span>
+<span id="L106" class="ln">   106  </span>	var linkErr *os.LinkError
+<span id="L107" class="ln">   107  </span>	if errors.As(e, &amp;linkErr) {
+<span id="L108" class="ln">   108  </span>		t.Error(&#34;errors.As(e, target) must be false when matching more than 1 error&#34;)
+<span id="L109" class="ln">   109  </span>	}
+<span id="L110" class="ln">   110  </span>	var pathErr *os.PathError
+<span id="L111" class="ln">   111  </span>	if errors.As(e, &amp;pathErr) {
+<span id="L112" class="ln">   112  </span>		t.Error(&#34;errors.As(e, target) false when matching more than 1 error&#34;)
+<span id="L113" class="ln">   113  </span>	}
+<span id="L114" class="ln">   114  </span>}
+<span id="L115" class="ln">   115  </span>
 </pre><p></p>
 
 <div id="footer">
