--- a/pipe/src/github.com/johnstarich/go/pipe/index.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/index.html
@@ -78,7 +78,7 @@
 	<td></td>
 	<td align="right">10503</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.717607929 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 	<td></td>
 	<td align="right">1909</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,25 +96,7 @@
 	<td></td>
 	<td align="right">2926</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="funnel.go">funnel.go</a></td>
-	<td></td>
-	<td align="right">417</td>
-	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="funnel_test.go">funnel_test.go</a></td>
-	<td></td>
-	<td align="right">932</td>
-	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -123,7 +105,7 @@
 	<td></td>
 	<td align="right">47</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -132,7 +114,25 @@
 	<td></td>
 	<td align="right">0</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="monad.go">monad.go</a></td>
+	<td></td>
+	<td align="right">935</td>
+	<td></td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="monad_test.go">monad_test.go</a></td>
+	<td></td>
+	<td align="right">1780</td>
+	<td></td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -141,7 +141,7 @@
 	<td></td>
 	<td align="right">4549</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -150,7 +150,7 @@
 	<td></td>
 	<td align="right">6474</td>
 	<td></td>
-	<td align="left">2021-10-10 21:04:06.721607999 +0000 UTC</td>
+	<td align="left">2021-10-10 21:23:15.207557367 +0000 UTC</td>
 </tr>
 
 
