gopages: Upgrade to Go 1.16 for embedded files

--- a/gopages/internal/generate/godoc.html
+++ b/gopages/internal/generate/godoc.html
@@ -1,7 +1,4 @@
-package generate
-
-const (
-	godocHTML = `<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -98,5 +95,3 @@ Build version {{html .Version}}.<br>
 </div><!-- #page -->
 </body>
 </html>
-`
-)
