gopages: Add -include-head flag, for custom <head></head> content

--- a/gopages/internal/generate/godoc.html
+++ b/gopages/internal/generate/godoc.html
@@ -26,6 +26,7 @@
 {{end}}
 {{with .Version}}<script>var goVersion = {{printf "%q" .}};</script>{{end}}
 <script src="{{gopages "" "BaseURL"}}/lib/godoc/godocs.js" defer></script>
+{{gopages "" "IncludeInHead" | gopagesHTML}}
 </head>
 <body>
 
