--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -13,8 +13,9 @@
 
 
 
-<script>var goVersion = "go1.15.15";</script>
+<script>var goVersion = "go1.16.13";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
+
 </head>
 <body>
 
@@ -76,9 +77,9 @@
 	
 	<td align="left"><a href="generate.go">generate.go</a></td>
 	<td></td>
-	<td align="right">17789</td>
+	<td align="right">17529</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,16 +88,34 @@
 	<td></td>
 	<td align="right">3117</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 <tr>
 	
-	<td align="left"><a href="godoc.html.go">godoc.html.go</a></td>
+	<td align="left"><a href="godoc.html">godoc.html</a></td>
 	<td></td>
-	<td align="right">2980</td>
+	<td align="right">2981</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="not-found.html">not-found.html</a></td>
+	<td></td>
+	<td align="right">218</td>
+	<td></td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="redirect.html">redirect.html</a></td>
+	<td></td>
+	<td align="right">176</td>
+	<td></td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,7 +124,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -114,16 +133,25 @@
 	<td></td>
 	<td align="right">1606</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="template.go">template.go</a></td>
 	<td></td>
-	<td align="right">4343</td>
+	<td align="right">4592</td>
 	<td></td>
-	<td align="left">2021-10-10 21:43:20.278227703 +0000 UTC</td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="watch-changes.html">watch-changes.html</a></td>
+	<td></td>
+	<td align="right">308</td>
+	<td></td>
+	<td align="left">2022-01-20 07:17:50.046634307 +0000 UTC</td>
 </tr>
 
 
@@ -132,7 +160,7 @@
 
 
 <div id="footer">
-Build version go1.15.15.<br/>
+Build version go1.16.13.<br/>
 </div>
 
 </div><!-- .container -->
