--- a/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
@@ -13,8 +13,9 @@
 
 
 
-<script>var goVersion = "go1.15.15";</script>
+<script>var goVersion = "go1.16.13";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
+
 </head>
 <body>
 
@@ -79,21 +80,24 @@
 <span id="L23" class="ln">    23  </span><span class="comment">//     	The Git token to push with. Usually this is an API key.</span>
 <span id="L24" class="ln">    24  </span><span class="comment">//   -gh-pages-user string</span>
 <span id="L25" class="ln">    25  </span><span class="comment">//     	The Git username to push with</span>
-<span id="L26" class="ln">    26  </span><span class="comment">//   -out string</span>
-<span id="L27" class="ln">    27  </span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
-<span id="L28" class="ln">    28  </span><span class="comment">//   -source-link string</span>
-<span id="L29" class="ln">    29  </span><span class="comment">//     	Custom source code link template. Disables built-in source code pages. For</span>
-<span id="L30" class="ln">    30  </span><span class="comment">//     	example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;</span>
-<span id="L31" class="ln">    31  </span><span class="comment">//     	generates links compatible with GitHub and GitLab. Must be a valid Go template</span>
-<span id="L32" class="ln">    32  </span><span class="comment">//     	and must generate valid URLs.</span>
-<span id="L33" class="ln">    33  </span><span class="comment">// </span>
-<span id="L34" class="ln">    34  </span><span class="comment">//</span>
-<span id="L35" class="ln">    35  </span>package main
-<span id="L36" class="ln">    36  </span>
+<span id="L26" class="ln">    26  </span><span class="comment">//   -include-head value</span>
+<span id="L27" class="ln">    27  </span><span class="comment">//     	Includes the given HTML file&#39;s contents in every page&#39;s &#39;&lt;head&gt;&lt;/head&gt;&#39;. Useful</span>
+<span id="L28" class="ln">    28  </span><span class="comment">//     	for including custom analytics scripts. Must be valid HTML.</span>
+<span id="L29" class="ln">    29  </span><span class="comment">//   -out string</span>
+<span id="L30" class="ln">    30  </span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
+<span id="L31" class="ln">    31  </span><span class="comment">//   -source-link string</span>
+<span id="L32" class="ln">    32  </span><span class="comment">//     	Custom source code link template. Disables built-in source code pages. For</span>
+<span id="L33" class="ln">    33  </span><span class="comment">//     	example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;</span>
+<span id="L34" class="ln">    34  </span><span class="comment">//     	generates links compatible with GitHub and GitLab. Must be a valid Go template</span>
+<span id="L35" class="ln">    35  </span><span class="comment">//     	and must generate valid URLs.</span>
+<span id="L36" class="ln">    36  </span><span class="comment">// </span>
+<span id="L37" class="ln">    37  </span><span class="comment">//</span>
+<span id="L38" class="ln">    38  </span>package main
+<span id="L39" class="ln">    39  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.15.15.<br/>
+Build version go1.16.13.<br/>
 </div>
 
 </div><!-- .container -->
