--- a/dns/pkg/github.com/johnstarich/go/dns/scutil/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/scutil/index.html
@@ -215,7 +215,8 @@
     <span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
     <span id="Scoped">Scoped</span> <a href="#Flag">Flag</a> = &#34;Scoped&#34;
 
-    <span id="RequestARecords">RequestARecords</span> <a href="#Flag">Flag</a> = &#34;Request A records&#34;
+    <span id="RequestARecords">RequestARecords</span>    <a href="#Flag">Flag</a> = &#34;Request A records&#34;
+    <span id="RequestAAAARecords">RequestAAAARecords</span> <a href="#Flag">Flag</a> = &#34;Request AAAA records&#34;
 )</pre>
 			
 
