--- a/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/index.html
+++ b/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="theme-color" content="#375EAB"/>
 
-  <title>src/github.com/johnstarich/go/dns/scutil/ - GoPages</title>
+  <title>src/github.com/johnstarich/go/dns/internal/cmd/dns-test/ - GoPages</title>
 
 <link type="text/css" rel="stylesheet" href="/go/dns/lib/godoc/style.css"/>
 
@@ -38,7 +38,7 @@
 
   <h1>
     Directory
-    <a href="/go/dns/src">src</a>/<a href="/go/dns/src/github.com">github.com</a>/<a href="/go/dns/src/github.com/johnstarich">johnstarich</a>/<a href="/go/dns/src/github.com/johnstarich/go">go</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns">dns</a>/<span class="text-muted">scutil/</span>
+    <a href="/go/dns/src">src</a>/<a href="/go/dns/src/github.com">github.com</a>/<a href="/go/dns/src/github.com/johnstarich">johnstarich</a>/<a href="/go/dns/src/github.com/johnstarich/go">go</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns">dns</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns/internal">internal</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns/internal/cmd">cmd</a>/<span class="text-muted">dns-test/</span>
   </h1>
 
 
@@ -46,7 +46,7 @@
 
 
   <h2>
-    Documentation: <a href="/go/dns/pkg/github.com/johnstarich/go/dns/scutil">github.com/johnstarich/go/dns/scutil</a>
+    Documentation: <a href="/go/dns/pkg/github.com/johnstarich/go/dns/internal/cmd/dns-test">github.com/johnstarich/go/dns/internal/cmd/dns-test</a>
   </h2>
 
 
@@ -75,36 +75,9 @@
 
 <tr>
 	
-	<td align="left"><a href="config.go">config.go</a></td>
+	<td align="left"><a href="main.go">main.go</a></td>
 	<td></td>
-	<td align="right">3350</td>
-	<td></td>
-	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="config_test.go">config_test.go</a></td>
-	<td></td>
-	<td align="right">5680</td>
-	<td></td>
-	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="flag.go">flag.go</a></td>
-	<td></td>
-	<td align="right">245</td>
-	<td></td>
-	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="reach.go">reach.go</a></td>
-	<td></td>
-	<td align="right">1656</td>
+	<td align="right">425</td>
 	<td></td>
 	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
