--- a/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
@@ -63,9 +63,10 @@
 <span id="L6" class="ln">     6  </span>	<span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
 <span id="L7" class="ln">     7  </span>	Scoped Flag = &#34;Scoped&#34;
 <span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	RequestARecords Flag = &#34;Request A records&#34;
-<span id="L10" class="ln">    10  </span>)
-<span id="L11" class="ln">    11  </span>
+<span id="L9" class="ln">     9  </span>	RequestARecords    Flag = &#34;Request A records&#34;
+<span id="L10" class="ln">    10  </span>	RequestAAAARecords Flag = &#34;Request AAAA records&#34;
+<span id="L11" class="ln">    11  </span>)
+<span id="L12" class="ln">    12  </span>
 </pre><p></p>
 
 <div id="footer">
