--- a/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
@@ -142,7 +142,7 @@
 		
 			
 			
-			<h2 id="StartDNSServer">func <a href="/go/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go#L53">StartDNSServer</a>
+			<h2 id="StartDNSServer">func <a href="/go/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go#L54">StartDNSServer</a>
 				<a class="permalink" href="#StartDNSServer">&#xb6;</a>
 				
 				
@@ -166,6 +166,7 @@
 <span id="DNSConfig.ResponseDelay"></span>    ResponseDelay <a href="/go/dns/pkg/time/">time</a>.<a href="/go/dns/pkg/time/#Duration">Duration</a>
 <span id="DNSConfig.Hostnames"></span>    Hostnames     map[<a href="/go/dns/pkg/builtin/#string">string</a>][]<a href="/go/dns/pkg/builtin/#string">string</a>
 <span id="DNSConfig.Port"></span>    Port          <a href="/go/dns/pkg/builtin/#int">int</a>
+<span id="DNSConfig.Network"></span>    Network       <a href="/go/dns/pkg/builtin/#string">string</a> <span class="comment">// e.g. udp4, udp6</span>
 }
 </pre>
 
