--- a/dns/src/github.com/johnstarich/go/dns/index.html
+++ b/dns/src/github.com/johnstarich/go/dns/index.html
@@ -79,7 +79,7 @@
 	<td></td>
 	<td align="right">1381</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -88,7 +88,7 @@
 	<td></td>
 	<td align="right">207</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -97,7 +97,7 @@
 	<td></td>
 	<td align="right">6389</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -106,25 +106,34 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="internal/">internal/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="resolver.go">resolver.go</a></td>
 	<td></td>
-	<td align="right">6218</td>
+	<td align="right">6588</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="resolver_test.go">resolver_test.go</a></td>
 	<td></td>
-	<td align="right">6760</td>
+	<td align="right">7576</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -133,7 +142,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -142,7 +151,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -151,7 +160,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-01-21 03:15:04.409042494 +0000 UTC</td>
+	<td align="left">2022-01-21 05:28:05.240299084 +0000 UTC</td>
 </tr>
 
 
