--- a/dns/src/github.com/johnstarich/go/dns/scutil/config_test.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/config_test.go.html
@@ -98,7 +98,7 @@
 <span id="L41" class="ln">    41  </span>			expectErr:   true,
 <span id="L42" class="ln">    42  </span>		},
 <span id="L43" class="ln">    43  </span>		{
-<span id="L44" class="ln">    44  </span>			description: &#34;one namespace&#34;,
+<span id="L44" class="ln">    44  </span>			description: &#34;one nameserver&#34;,
 <span id="L45" class="ln">    45  </span>			scutilOutput: `
 <span id="L46" class="ln">    46  </span>resolver #1
 <span id="L47" class="ln">    47  </span>  nameserver[0] : 1.2.3.4
@@ -155,115 +155,136 @@
 <span id="L98" class="ln">    98  </span>			},
 <span id="L99" class="ln">    99  </span>		},
 <span id="L100" class="ln">   100  </span>		{
-<span id="L101" class="ln">   101  </span>			description: &#34;full output example&#34;,
+<span id="L101" class="ln">   101  </span>			description: &#34;one full IPv6 nameserver&#34;,
 <span id="L102" class="ln">   102  </span>			scutilOutput: `
-<span id="L103" class="ln">   103  </span>DNS configuration
-<span id="L104" class="ln">   104  </span>
-<span id="L105" class="ln">   105  </span>resolver #1
-<span id="L106" class="ln">   106  </span>  nameserver[0] : 8.8.8.8
-<span id="L107" class="ln">   107  </span>  nameserver[1] : 8.8.4.4
-<span id="L108" class="ln">   108  </span>  if_index : 5 (en0)
-<span id="L109" class="ln">   109  </span>  flags    : Request A records
-<span id="L110" class="ln">   110  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
-<span id="L111" class="ln">   111  </span>
-<span id="L112" class="ln">   112  </span>resolver #2
-<span id="L113" class="ln">   113  </span>  domain   : local
-<span id="L114" class="ln">   114  </span>  options  : mdns
-<span id="L115" class="ln">   115  </span>  timeout  : 5
-<span id="L116" class="ln">   116  </span>  flags    : Request A records
-<span id="L117" class="ln">   117  </span>  reach    : 0x00000000 (Not Reachable)
-<span id="L118" class="ln">   118  </span>  order    : 300000
-<span id="L119" class="ln">   119  </span>
-<span id="L120" class="ln">   120  </span>resolver #3
-<span id="L121" class="ln">   121  </span>  domain   : 9.e.f.ip6.arpa
-<span id="L122" class="ln">   122  </span>  options  : mdns
-<span id="L123" class="ln">   123  </span>  timeout  : 5
-<span id="L124" class="ln">   124  </span>  flags    : Request A records
-<span id="L125" class="ln">   125  </span>  reach    : 0x00000000 (Not Reachable)
-<span id="L126" class="ln">   126  </span>  order    : 300600
-<span id="L127" class="ln">   127  </span>
-<span id="L128" class="ln">   128  </span>DNS configuration (for scoped queries)
-<span id="L129" class="ln">   129  </span>
-<span id="L130" class="ln">   130  </span>resolver #1
-<span id="L131" class="ln">   131  </span>  nameserver[0] : 8.8.8.8
-<span id="L132" class="ln">   132  </span>  nameserver[1] : 8.8.4.4
-<span id="L133" class="ln">   133  </span>  if_index : 5 (en0)
-<span id="L134" class="ln">   134  </span>  flags    : Scoped, Request A records
-<span id="L135" class="ln">   135  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
-<span id="L136" class="ln">   136  </span>
-<span id="L137" class="ln">   137  </span>resolver #2
-<span id="L138" class="ln">   138  </span>  nameserver[0] : 8.8.8.8
-<span id="L139" class="ln">   139  </span>  nameserver[1] : 8.8.4.4
-<span id="L140" class="ln">   140  </span>  if_index : 10 (en10)
-<span id="L141" class="ln">   141  </span>  flags    : Scoped, Request A records
-<span id="L142" class="ln">   142  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
-<span id="L143" class="ln">   143  </span>			`,
-<span id="L144" class="ln">   144  </span>			expectResolvers: []Resolver{
-<span id="L145" class="ln">   145  </span>				{
-<span id="L146" class="ln">   146  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
-<span id="L147" class="ln">   147  </span>					InterfaceIndex: 5,
-<span id="L148" class="ln">   148  </span>					InterfaceName:  &#34;en0&#34;,
-<span id="L149" class="ln">   149  </span>					Flags:          []Flag{RequestARecords},
-<span id="L150" class="ln">   150  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
-<span id="L151" class="ln">   151  </span>					reachable:      true,
-<span id="L152" class="ln">   152  </span>				},
-<span id="L153" class="ln">   153  </span>				{
-<span id="L154" class="ln">   154  </span>					Domain:       &#34;local&#34;,
-<span id="L155" class="ln">   155  </span>					MulticastDNS: true,
-<span id="L156" class="ln">   156  </span>					Timeout:      5 * time.Second,
-<span id="L157" class="ln">   157  </span>					Flags:        []Flag{RequestARecords},
-<span id="L158" class="ln">   158  </span>					Reach:        []Reach{NotReachable},
-<span id="L159" class="ln">   159  </span>					Order:        300000,
-<span id="L160" class="ln">   160  </span>				},
-<span id="L161" class="ln">   161  </span>				{
-<span id="L162" class="ln">   162  </span>					Domain:       &#34;9.e.f.ip6.arpa&#34;,
-<span id="L163" class="ln">   163  </span>					MulticastDNS: true,
-<span id="L164" class="ln">   164  </span>					Timeout:      5 * time.Second,
-<span id="L165" class="ln">   165  </span>					Flags:        []Flag{RequestARecords},
-<span id="L166" class="ln">   166  </span>					Reach:        []Reach{NotReachable},
-<span id="L167" class="ln">   167  </span>					Order:        300600,
-<span id="L168" class="ln">   168  </span>				},
-<span id="L169" class="ln">   169  </span>				{
-<span id="L170" class="ln">   170  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
-<span id="L171" class="ln">   171  </span>					InterfaceIndex: 5,
-<span id="L172" class="ln">   172  </span>					InterfaceName:  &#34;en0&#34;,
-<span id="L173" class="ln">   173  </span>					Flags:          []Flag{Scoped, RequestARecords},
-<span id="L174" class="ln">   174  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
-<span id="L175" class="ln">   175  </span>					reachable:      true,
-<span id="L176" class="ln">   176  </span>				},
-<span id="L177" class="ln">   177  </span>				{
-<span id="L178" class="ln">   178  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
-<span id="L179" class="ln">   179  </span>					InterfaceIndex: 10,
-<span id="L180" class="ln">   180  </span>					InterfaceName:  &#34;en10&#34;,
-<span id="L181" class="ln">   181  </span>					Flags:          []Flag{Scoped, RequestARecords},
-<span id="L182" class="ln">   182  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
-<span id="L183" class="ln">   183  </span>					reachable:      true,
-<span id="L184" class="ln">   184  </span>				},
-<span id="L185" class="ln">   185  </span>			},
-<span id="L186" class="ln">   186  </span>		},
-<span id="L187" class="ln">   187  </span>	} {
-<span id="L188" class="ln">   188  </span>		t.Run(tc.description, func(t *testing.T) {
-<span id="L189" class="ln">   189  </span>			ctx := context.Background()
-<span id="L190" class="ln">   190  </span>			getSCUtilDNS := func(ctx context.Context) ([]byte, error) {
-<span id="L191" class="ln">   191  </span>				return []byte(tc.scutilOutput), tc.scutilErr
-<span id="L192" class="ln">   192  </span>			}
-<span id="L193" class="ln">   193  </span>			cfg, err := readMacOSDNS(ctx, getSCUtilDNS)
-<span id="L194" class="ln">   194  </span>			if tc.expectErr {
-<span id="L195" class="ln">   195  </span>				assert.Equal(t, tc.scutilErr, err)
-<span id="L196" class="ln">   196  </span>				return
-<span id="L197" class="ln">   197  </span>			}
-<span id="L198" class="ln">   198  </span>			require.NoError(t, err)
-<span id="L199" class="ln">   199  </span>
-<span id="L200" class="ln">   200  </span>			assert.Equal(t, tc.expectResolvers, cfg.Resolvers)
-<span id="L201" class="ln">   201  </span>		})
-<span id="L202" class="ln">   202  </span>	}
-<span id="L203" class="ln">   203  </span>}
-<span id="L204" class="ln">   204  </span>
-<span id="L205" class="ln">   205  </span>func TestReachable(t *testing.T) {
-<span id="L206" class="ln">   206  </span>	assert.False(t, Resolver{reachable: false}.Reachable())
-<span id="L207" class="ln">   207  </span>	assert.True(t, Resolver{reachable: true}.Reachable())
-<span id="L208" class="ln">   208  </span>}
-<span id="L209" class="ln">   209  </span>
+<span id="L103" class="ln">   103  </span>resolver #1
+<span id="L104" class="ln">   104  </span>  nameserver[0] : fe80::8c86:1eff:fe8b:cc64%5d
+<span id="L105" class="ln">   105  </span>  nameserver[1] : 172.20.10.1
+<span id="L106" class="ln">   106  </span>  if_index : 5 (en0)
+<span id="L107" class="ln">   107  </span>  flags    : Request A records, Request AAAA records
+<span id="L108" class="ln">   108  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
+<span id="L109" class="ln">   109  </span>			`,
+<span id="L110" class="ln">   110  </span>			expectResolvers: []Resolver{
+<span id="L111" class="ln">   111  </span>				{
+<span id="L112" class="ln">   112  </span>					Flags:          []Flag{RequestARecords, RequestAAAARecords},
+<span id="L113" class="ln">   113  </span>					Nameservers:    []string{&#34;fe80::8c86:1eff:fe8b:cc64%5d&#34;, &#34;172.20.10.1&#34;},
+<span id="L114" class="ln">   114  </span>					InterfaceIndex: 5,
+<span id="L115" class="ln">   115  </span>					InterfaceName:  &#34;en0&#34;,
+<span id="L116" class="ln">   116  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
+<span id="L117" class="ln">   117  </span>					reachable:      true,
+<span id="L118" class="ln">   118  </span>				},
+<span id="L119" class="ln">   119  </span>			},
+<span id="L120" class="ln">   120  </span>		},
+<span id="L121" class="ln">   121  </span>		{
+<span id="L122" class="ln">   122  </span>			description: &#34;full output example&#34;,
+<span id="L123" class="ln">   123  </span>			scutilOutput: `
+<span id="L124" class="ln">   124  </span>DNS configuration
+<span id="L125" class="ln">   125  </span>
+<span id="L126" class="ln">   126  </span>resolver #1
+<span id="L127" class="ln">   127  </span>  nameserver[0] : 8.8.8.8
+<span id="L128" class="ln">   128  </span>  nameserver[1] : 8.8.4.4
+<span id="L129" class="ln">   129  </span>  if_index : 5 (en0)
+<span id="L130" class="ln">   130  </span>  flags    : Request A records
+<span id="L131" class="ln">   131  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
+<span id="L132" class="ln">   132  </span>
+<span id="L133" class="ln">   133  </span>resolver #2
+<span id="L134" class="ln">   134  </span>  domain   : local
+<span id="L135" class="ln">   135  </span>  options  : mdns
+<span id="L136" class="ln">   136  </span>  timeout  : 5
+<span id="L137" class="ln">   137  </span>  flags    : Request A records
+<span id="L138" class="ln">   138  </span>  reach    : 0x00000000 (Not Reachable)
+<span id="L139" class="ln">   139  </span>  order    : 300000
+<span id="L140" class="ln">   140  </span>
+<span id="L141" class="ln">   141  </span>resolver #3
+<span id="L142" class="ln">   142  </span>  domain   : 9.e.f.ip6.arpa
+<span id="L143" class="ln">   143  </span>  options  : mdns
+<span id="L144" class="ln">   144  </span>  timeout  : 5
+<span id="L145" class="ln">   145  </span>  flags    : Request A records
+<span id="L146" class="ln">   146  </span>  reach    : 0x00000000 (Not Reachable)
+<span id="L147" class="ln">   147  </span>  order    : 300600
+<span id="L148" class="ln">   148  </span>
+<span id="L149" class="ln">   149  </span>DNS configuration (for scoped queries)
+<span id="L150" class="ln">   150  </span>
+<span id="L151" class="ln">   151  </span>resolver #1
+<span id="L152" class="ln">   152  </span>  nameserver[0] : 8.8.8.8
+<span id="L153" class="ln">   153  </span>  nameserver[1] : 8.8.4.4
+<span id="L154" class="ln">   154  </span>  if_index : 5 (en0)
+<span id="L155" class="ln">   155  </span>  flags    : Scoped, Request A records
+<span id="L156" class="ln">   156  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
+<span id="L157" class="ln">   157  </span>
+<span id="L158" class="ln">   158  </span>resolver #2
+<span id="L159" class="ln">   159  </span>  nameserver[0] : 8.8.8.8
+<span id="L160" class="ln">   160  </span>  nameserver[1] : 8.8.4.4
+<span id="L161" class="ln">   161  </span>  if_index : 10 (en10)
+<span id="L162" class="ln">   162  </span>  flags    : Scoped, Request A records
+<span id="L163" class="ln">   163  </span>  reach    : 0x00020002 (Reachable,Directly Reachable Address)
+<span id="L164" class="ln">   164  </span>			`,
+<span id="L165" class="ln">   165  </span>			expectResolvers: []Resolver{
+<span id="L166" class="ln">   166  </span>				{
+<span id="L167" class="ln">   167  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
+<span id="L168" class="ln">   168  </span>					InterfaceIndex: 5,
+<span id="L169" class="ln">   169  </span>					InterfaceName:  &#34;en0&#34;,
+<span id="L170" class="ln">   170  </span>					Flags:          []Flag{RequestARecords},
+<span id="L171" class="ln">   171  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
+<span id="L172" class="ln">   172  </span>					reachable:      true,
+<span id="L173" class="ln">   173  </span>				},
+<span id="L174" class="ln">   174  </span>				{
+<span id="L175" class="ln">   175  </span>					Domain:       &#34;local&#34;,
+<span id="L176" class="ln">   176  </span>					MulticastDNS: true,
+<span id="L177" class="ln">   177  </span>					Timeout:      5 * time.Second,
+<span id="L178" class="ln">   178  </span>					Flags:        []Flag{RequestARecords},
+<span id="L179" class="ln">   179  </span>					Reach:        []Reach{NotReachable},
+<span id="L180" class="ln">   180  </span>					Order:        300000,
+<span id="L181" class="ln">   181  </span>				},
+<span id="L182" class="ln">   182  </span>				{
+<span id="L183" class="ln">   183  </span>					Domain:       &#34;9.e.f.ip6.arpa&#34;,
+<span id="L184" class="ln">   184  </span>					MulticastDNS: true,
+<span id="L185" class="ln">   185  </span>					Timeout:      5 * time.Second,
+<span id="L186" class="ln">   186  </span>					Flags:        []Flag{RequestARecords},
+<span id="L187" class="ln">   187  </span>					Reach:        []Reach{NotReachable},
+<span id="L188" class="ln">   188  </span>					Order:        300600,
+<span id="L189" class="ln">   189  </span>				},
+<span id="L190" class="ln">   190  </span>				{
+<span id="L191" class="ln">   191  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
+<span id="L192" class="ln">   192  </span>					InterfaceIndex: 5,
+<span id="L193" class="ln">   193  </span>					InterfaceName:  &#34;en0&#34;,
+<span id="L194" class="ln">   194  </span>					Flags:          []Flag{Scoped, RequestARecords},
+<span id="L195" class="ln">   195  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
+<span id="L196" class="ln">   196  </span>					reachable:      true,
+<span id="L197" class="ln">   197  </span>				},
+<span id="L198" class="ln">   198  </span>				{
+<span id="L199" class="ln">   199  </span>					Nameservers:    []string{&#34;8.8.8.8&#34;, &#34;8.8.4.4&#34;},
+<span id="L200" class="ln">   200  </span>					InterfaceIndex: 10,
+<span id="L201" class="ln">   201  </span>					InterfaceName:  &#34;en10&#34;,
+<span id="L202" class="ln">   202  </span>					Flags:          []Flag{Scoped, RequestARecords},
+<span id="L203" class="ln">   203  </span>					Reach:          []Reach{Reachable, DirectlyReachableAddress},
+<span id="L204" class="ln">   204  </span>					reachable:      true,
+<span id="L205" class="ln">   205  </span>				},
+<span id="L206" class="ln">   206  </span>			},
+<span id="L207" class="ln">   207  </span>		},
+<span id="L208" class="ln">   208  </span>	} {
+<span id="L209" class="ln">   209  </span>		t.Run(tc.description, func(t *testing.T) {
+<span id="L210" class="ln">   210  </span>			ctx := context.Background()
+<span id="L211" class="ln">   211  </span>			getSCUtilDNS := func(ctx context.Context) ([]byte, error) {
+<span id="L212" class="ln">   212  </span>				return []byte(tc.scutilOutput), tc.scutilErr
+<span id="L213" class="ln">   213  </span>			}
+<span id="L214" class="ln">   214  </span>			cfg, err := readMacOSDNS(ctx, getSCUtilDNS)
+<span id="L215" class="ln">   215  </span>			if tc.expectErr {
+<span id="L216" class="ln">   216  </span>				assert.Equal(t, tc.scutilErr, err)
+<span id="L217" class="ln">   217  </span>				return
+<span id="L218" class="ln">   218  </span>			}
+<span id="L219" class="ln">   219  </span>			require.NoError(t, err)
+<span id="L220" class="ln">   220  </span>
+<span id="L221" class="ln">   221  </span>			assert.Equal(t, tc.expectResolvers, cfg.Resolvers)
+<span id="L222" class="ln">   222  </span>		})
+<span id="L223" class="ln">   223  </span>	}
+<span id="L224" class="ln">   224  </span>}
+<span id="L225" class="ln">   225  </span>
+<span id="L226" class="ln">   226  </span>func TestReachable(t *testing.T) {
+<span id="L227" class="ln">   227  </span>	assert.False(t, Resolver{reachable: false}.Reachable())
+<span id="L228" class="ln">   228  </span>	assert.True(t, Resolver{reachable: true}.Reachable())
+<span id="L229" class="ln">   229  </span>}
+<span id="L230" class="ln">   230  </span>
 </pre><p></p>
 
 <div id="footer">
