--- a/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
@@ -105,36 +105,51 @@
 <span id="L48" class="ln">    48  </span>	ResponseDelay time.Duration
 <span id="L49" class="ln">    49  </span>	Hostnames     map[string][]string
 <span id="L50" class="ln">    50  </span>	Port          int
-<span id="L51" class="ln">    51  </span>}
-<span id="L52" class="ln">    52  </span>
-<span id="L53" class="ln">    53  </span>func StartDNSServer(t *testing.T, config DNSConfig) (address string, cancel context.CancelFunc) {
-<span id="L54" class="ln">    54  </span>	ctx, cancel := context.WithCancel(context.Background())
-<span id="L55" class="ln">    55  </span>	mux := dns.NewServeMux()
-<span id="L56" class="ln">    56  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(t, ctx, config.ResponseDelay, config.Hostnames))
-<span id="L57" class="ln">    57  </span>
-<span id="L58" class="ln">    58  </span>	const network = &#34;udp4&#34;
-<span id="L59" class="ln">    59  </span>	packetConn, err := net.ListenUDP(network, &amp;net.UDPAddr{Port: config.Port})
-<span id="L60" class="ln">    60  </span>	require.NoError(t, err)
-<span id="L61" class="ln">    61  </span>	server := &amp;dns.Server{
-<span id="L62" class="ln">    62  </span>		Net:        network,
-<span id="L63" class="ln">    63  </span>		PacketConn: packetConn,
-<span id="L64" class="ln">    64  </span>		Handler:    mux,
-<span id="L65" class="ln">    65  </span>	}
-<span id="L66" class="ln">    66  </span>	go func() {
-<span id="L67" class="ln">    67  </span>		err := server.ActivateAndServe()
-<span id="L68" class="ln">    68  </span>		require.NoError(t, err)
-<span id="L69" class="ln">    69  </span>	}()
-<span id="L70" class="ln">    70  </span>	go func() {
-<span id="L71" class="ln">    71  </span>		&lt;-ctx.Done()
-<span id="L72" class="ln">    72  </span>		_ = server.Shutdown()
-<span id="L73" class="ln">    73  </span>	}()
-<span id="L74" class="ln">    74  </span>	localAddr := server.PacketConn.LocalAddr().String()
-<span id="L75" class="ln">    75  </span>	_, port, err := net.SplitHostPort(localAddr)
-<span id="L76" class="ln">    76  </span>	require.NoError(t, err)
-<span id="L77" class="ln">    77  </span>	localAddr = &#34;127.0.0.1:&#34; + port
-<span id="L78" class="ln">    78  </span>	return localAddr, cancel
-<span id="L79" class="ln">    79  </span>}
-<span id="L80" class="ln">    80  </span>
+<span id="L51" class="ln">    51  </span>	Network       string <span class="comment">// e.g. udp4, udp6</span>
+<span id="L52" class="ln">    52  </span>}
+<span id="L53" class="ln">    53  </span>
+<span id="L54" class="ln">    54  </span>func StartDNSServer(t *testing.T, config DNSConfig) (address string, cancel context.CancelFunc) {
+<span id="L55" class="ln">    55  </span>	t.Helper()
+<span id="L56" class="ln">    56  </span>	if config.Network == &#34;&#34; {
+<span id="L57" class="ln">    57  </span>		config.Network = &#34;udp4&#34;
+<span id="L58" class="ln">    58  </span>	}
+<span id="L59" class="ln">    59  </span>	switch config.Network {
+<span id="L60" class="ln">    60  </span>	case &#34;udp4&#34;, &#34;udp6&#34;:
+<span id="L61" class="ln">    61  </span>	default:
+<span id="L62" class="ln">    62  </span>		t.Fatal(&#34;Unsupported network for DNS:&#34;, config.Network)
+<span id="L63" class="ln">    63  </span>	}
+<span id="L64" class="ln">    64  </span>
+<span id="L65" class="ln">    65  </span>	ctx, cancel := context.WithCancel(context.Background())
+<span id="L66" class="ln">    66  </span>	mux := dns.NewServeMux()
+<span id="L67" class="ln">    67  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(t, ctx, config.ResponseDelay, config.Hostnames))
+<span id="L68" class="ln">    68  </span>
+<span id="L69" class="ln">    69  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
+<span id="L70" class="ln">    70  </span>	require.NoError(t, err)
+<span id="L71" class="ln">    71  </span>	server := &amp;dns.Server{
+<span id="L72" class="ln">    72  </span>		Net:        config.Network,
+<span id="L73" class="ln">    73  </span>		PacketConn: packetConn,
+<span id="L74" class="ln">    74  </span>		Handler:    mux,
+<span id="L75" class="ln">    75  </span>	}
+<span id="L76" class="ln">    76  </span>	go func() {
+<span id="L77" class="ln">    77  </span>		err := server.ActivateAndServe()
+<span id="L78" class="ln">    78  </span>		require.NoError(t, err)
+<span id="L79" class="ln">    79  </span>	}()
+<span id="L80" class="ln">    80  </span>	go func() {
+<span id="L81" class="ln">    81  </span>		&lt;-ctx.Done()
+<span id="L82" class="ln">    82  </span>		_ = server.Shutdown()
+<span id="L83" class="ln">    83  </span>	}()
+<span id="L84" class="ln">    84  </span>	localAddr := server.PacketConn.LocalAddr().String()
+<span id="L85" class="ln">    85  </span>	_, port, err := net.SplitHostPort(localAddr)
+<span id="L86" class="ln">    86  </span>	require.NoError(t, err)
+<span id="L87" class="ln">    87  </span>	switch config.Network {
+<span id="L88" class="ln">    88  </span>	case &#34;udp4&#34;:
+<span id="L89" class="ln">    89  </span>		localAddr = &#34;127.0.0.1:&#34; + port
+<span id="L90" class="ln">    90  </span>	case &#34;udp6&#34;:
+<span id="L91" class="ln">    91  </span>		localAddr = &#34;[::1]:&#34; + port
+<span id="L92" class="ln">    92  </span>	}
+<span id="L93" class="ln">    93  </span>	return localAddr, cancel
+<span id="L94" class="ln">    94  </span>}
+<span id="L95" class="ln">    95  </span>
 </pre><p></p>
 
 <div id="footer">
